clusters/Master-5cf92/03-argocd-apps/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-web
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pw.lab-hc.cloud`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 80
          sticky:
            cookie:
              name: prometheus-sticky
              httpOnly: true
              sameSite: lax
